# Naortic

./: LICENSE  README.md
api/: .env.example  Cargo.toml
api/migrations/2022-11-02-093917_create_accounts/: up.sql
api/migrations/2022-11-06-103640_add_token/: down.sql  up.sql
api/migrations/2022-11-07-030054_add_email/: down.sql  up.sql
api/migrations/2022-11-07-030249_delete_passwd/: down.sql  up.sql
api/src/: account.rs  database.rs  main.rs  models.rs  postgre.sql  routes.rs  schema.rs  util.rs
api/src/routes/: email.rs  github.rs  mod.rs  user.rs
api/src/routes/login/: email.rs
api/src/routes/signup/: email.rs
api/src/routes/user/: mod.rs  name.rs
api/src/routes/user/friends/: add.rs  mod.rs  remove.rs
website/: .env.example  package.json  tailwind.config.cjs  vite.config.ts
website/src/: app.html
website/src/lib/: User.ts
website/src/routes/: +layout.svelte  +page.svelte  ArrowIcon.svelte  CrossIcon.svelte  GitHubIcon.svelte  LoadingIcon.svelte  TickIcon.svelte
website/src/routes/(app)/: +layout.svelte
website/src/routes/(app)/app/dm/[friend]/: +page.js  +page.svelte
website/src/routes/(home)/: +layout.svelte  +page.svelte
website/src/routes/(home)/login/: +page.svelte
website/src/routes/(home)/signup/: +page.svelte
website/src/routes/app/: +page.svelte
website/src/routes/login/: +page.svelte
website/src/routes/login/github/: +page.svelte
