[package]
name = "api"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.12"
jsonwebtoken = { version = "8", default-features = false }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
serde = "1.0.147"
serde_json = "1.0.87"
