[package]
name = "api"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"

[dependencies]
dotenv = "0.15.0"
diesel = { version = "2.0.0", features = ["mysql"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
sha2 = "0.10"
serde = "1.0.147"
serde_json = "1.0.87"
base64ct = { version = "1.5.3", features = ["alloc"] }
