[package]
name = "api"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"

[dependencies]
dotenv = "0.15.0"
rawsql = "0.1.1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
sha2 = "0.10"
serde = "1.0.147"
serde_json = "1.0.87"
base64ct = { version = "1.5.3", features = ["alloc"] }
tokio-postgres = "0.7.7"
tokio = { version = "1.22.0", features = ["macros"] }
rustls = "0.20.7"
tokio-postgres-rustls = "0.9.0"
rustls-native-certs = "0.6.2"
rs-snowflake = "0.6.0"
anyhow = "1.0.66"
